--- a/config/tailwind/globals.css
+++ b/config/tailwind/globals.css
@@ -6,6 +6,11 @@
 
 @custom-variant dark (&:is(.dark *));
 
+/* styles for the active menu */
+.Menu_active {
+  @apply bg-primary text-navigation flex w-20 flex-col items-center justify-center rounded-[50%_50%_0%_0%] px-6 py-3 font-semibold shadow-lg transition-all duration-300 md:w-40;
+}
+
 :root {
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
@@ -40,6 +45,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --navegation: oklch(90.019% 0.01207 16.915);
 }
 
 .dark {
@@ -75,6 +81,7 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(0.269 0 0);
   --sidebar-ring: oklch(0.439 0 0);
+  --navegation: oklch(19.034% 0.0049 17.349);
 }
 
 @theme inline {
@@ -114,6 +121,7 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-navigation: var(--navegation); /*new color for navigation letters*/
 }
 
 @layer base {
